complete: dashboard, report

--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
     <title>Instant Dev Logs - Distributed Logging Dashboard</title>
     <meta name="description" content="Professional distributed logging system with real-time streaming, filtering, and analytics for developers" />
     <meta name="author" content="Instant Dev Logs" />
-
     <meta property="og:title" content="Instant Dev Logs - Distributed Logging Dashboard" />
     <meta property="og:description" content="Professional distributed logging system with real-time streaming, filtering, and analytics for developers" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:type" content="website" /> -->
   </head>
 
   <body class="dark">
